# causalkit

./: .gitignore  CONTRIBUTION.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build-wheels.sh  publish.yml
causalkit/: __init__.py  base_model.py
example/: random_forest.ipynb
src/: bin.rs  config.rs  data_loader.rs  dmatrix.rs  kl.rs  learn.rs  lib.rs  linalg.rs  main.rs  partition.rs  python.rs  random.rs  regression.rs  rf.rs  split_info.rs  statistic.rs  strategy.rs  tree.rs  util.rs
