[project]
name = "causalkit"
version = "0.1.3"
authors = [
    { name = "Xu Wang", email = "scuchina@gmail.com" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
